# backup2usb-chromeos

./: .gitignore  BACKUP-OPS-DASHBOARD-V2.html  BACKUP-OPS-DASHBOARD.html  CLAUDE.md  ENDPOINT_TEST_PLAN.md  GAP_ANALYSIS.md  LICENSE  LOGS_FIX_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  TEST-PLAN.md  TEST_RESULTS.md  TODO.md  backup_folders.sh  backup_history.json  backup_server.py  backup_status.json  profiles.json  start.sh
archive/docs/: ARCHITECTURE.md  CODEBASE_ANALYSIS.md  README_REFACTORED.md  REFACTOR_SUMMARY.md
archive/old_system/: backup_server.py
archive/python-legacy/: BACKUP-OPS-DASHBOARD-V2.html  a2a_backup_system.py  claude_coordination.json  claude_coordinator.py  main.py  multiprocess_backup.py  requirements.txt  start_a2a_system.sh
archive/python-legacy/backup_system/config/: settings.py
archive/python-legacy/backup_system/core/: backup_manager.py
archive/python-legacy/backup_system/server/: http_server.py
archive/python-legacy/backup_system/utils/: file_utils.py
archive/python-legacy/backup_system/workers/: agent_protocol.py  (+1 more)
backup-frontend/: index.html  package-lock.json  package.json  vite.config.ts
backup-frontend/src/: App.tsx
backup-frontend/src/components/: BackupTab.tsx  ControlButtons.tsx  Header.tsx  HistoryTab.tsx  LogsTab.tsx  ScheduleTab.tsx
backup-frontend/src/hooks/: useWebSocket.ts
backup-frontend/src/services/: api.ts
backup-frontend/src/store/: backupStore.ts
backup-frontend/src/types/: backup.ts
backup-frontend/src/utils/: format.ts
backup-rust/: Cargo.toml  backup_system.db  config.toml
backup-rust-tests/: capture-logs-tab.js  package-lock.json  package.json  playwright.config.ts
backup-rust-tests/e2e/: api-health.spec.ts  inventory-ui.spec.ts
backup-rust-tests/reports/: index.html  test-results.json
backup-rust-tests/scripts/: restart-services.sh
backup-rust-tests/test-results/: .last-run.json
backup-rust-tests/test-results/inventory-ui-UI-Inventory-Inventory-Logs-Tab-chromium/: error-context.md
backup-rust/examples/: dynamic_demo.rs
backup-rust/src/: lib.rs  main.rs
backup-rust/src/api/: compat.rs  mod.rs
backup-rust/src/backup/: dynamic_task_manager.rs  manager.rs  mod.rs  rsync.rs  rsync_monitor.rs  scanner.rs  task_manager.rs  task_processor.rs  worker.rs
backup-rust/src/storage/: mod.rs
backup-rust/src/utils/: config.rs  disk.rs  log_buffer.rs  logging.rs  mod.rs  resource_monitor.rs
backup-rust/src/web/: mod.rs  static_files.rs  websocket.rs
backup-rust/static/: index.html
backup-rust/static/assets/: index-CkU6ULnL.js  index-DeQ8XGvy.js  index-KPdENmla.js
backup_env/: pyvenv.cfg
